--- a/receitas.html
+++ b/receitas.html
@@ -31,7 +31,7 @@
           </nav>   
     </header>
     <main>
-      <div class="card" style="width: 18rem;">  
+      <div class="card" style="width: 200px;">  
         <img class="card-img-top" src="img/Arroz.jpg" alt="Arroz com Couve-Flor">
         <h1 class="card-title">Arroz de Couve-Flor</h1>
         <div class="card-body">
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">  
+      <div class="card" style="width: 200px;">  
         <img class="card-img-top" src="img/bolo.jpg" alt="Bolo de café">
         <h1 class="card-title">Bolo de Café</h1>
         <div class="card-body">
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">  
+      <div class="card" style="width: 200px;">  
         <img class="card-img-top" src="img/Coxinha.jpg" alt="Coxinha de Brigadeiro">
         <h1 class="card-title" >Coxinha de Brigadeiro</h1>
         <div class="card-body">
