melhoria trabalho nivel 1

--- a/html/receitas.html
+++ b/html/receitas.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/formatos.css">
-    <link rel="stylesheet" href="style/style_receitas.css">
+    <link rel="stylesheet" href="../style/formatos.css">
+    <link rel="stylesheet" href="../style/style_receitas.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>       
@@ -31,8 +33,8 @@
           </nav>   
     </header>
     <main>
-      <div class="card" style="width: 200px;">  
-        <img class="card-img-top" src="img/Arroz.jpg" alt="Arroz com Couve-Flor">
+      <div class="card" style="width: 400px;">  
+        <img class="card-img-top" src="../img/Arroz.jpg" alt="Arroz com Couve-Flor">
         <h1 class="card-title">Arroz de Couve-Flor</h1>
         <div class="card-body">
           <div class="card-text">
@@ -47,8 +49,8 @@
           </div>
         </div>
       </div>
-      <div class="card" style="width: 200px;">  
-        <img class="card-img-top" src="img/bolo.jpg" alt="Bolo de café">
+      <div class="card" style="width: 400px;">  
+        <img class="card-img-top" src="../img/bolo.jpg" alt="Bolo de café">
         <h1 class="card-title">Bolo de Café</h1>
         <div class="card-body">
           <div class="card-text">
@@ -64,8 +66,8 @@
           </div>
         </div>
       </div>
-      <div class="card" style="width: 200px;">  
-        <img class="card-img-top" src="img/Coxinha.jpg" alt="Coxinha de Brigadeiro">
+      <div class="card" style="width: 400px;">  
+        <img class="card-img-top" src="../img/Coxinha.jpg" alt="Coxinha de Brigadeiro">
         <h1 class="card-title" >Coxinha de Brigadeiro</h1>
         <div class="card-body">
           <div class="card-text">
@@ -86,6 +88,4 @@
         <h1>© Jurema 2023</h1>
     </footer>
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </html>
