--- a/html/home.html
+++ b/html/home.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/formatos.css">
-    <link rel="stylesheet" href="style/style_home.css">
+    <link rel="stylesheet" href="../style/formatos.css">
+    <link rel="stylesheet" href="../style/style_home.css">
 </head>
 <body>
     <header>       
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section>
-            <img class="logo" src="img/logo.png" alt="Logo Principal">
+            <img class="logo" src="../img/logo.png" alt="Logo Principal">
             <h1>Receitas da Tia Jurema</h1>
         </section>
         <p>Bem-vindo(a) ao site da Tia Jurema. Conheça deliciosas receitas para o dia a dia.</p>  
